--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,7 +1,8 @@
+# $Id$
 # Maintainer: Alexander F Rødseth <rodseth@gmail.com>
 
 pkgname=nimble
-pkgver=0.6.2
+pkgver=0.7.0
 epoch=1
 pkgrel=1
 pkgdesc='Package manager for the Nim programming language'
@@ -13,7 +14,7 @@ source=("git://github.com/nimrod-code/nimble.git#tag=v$pkgver")
 md5sums=('SKIP')
 
 build() {
-  cd "$pkgname/src/"
+  cd "$pkgname/src"
 
   nim c -d:release nimble.nim
 }
@@ -25,4 +26,5 @@ package() {
   install -Dm644 "license.txt" "$pkgdir/usr/share/licenses/$pkgname/license.txt"
 }
 
+# getver ok
 # vim:set ts=2 sw=2 et:
