--- a/repos/community-i686/PKGBUILD
+++ b/repos/community-i686/PKGBUILD
@@ -6,18 +6,15 @@
 
 pkgname=gst-editing-services
 pkgver=1.6.1
-pkgrel=1
+pkgrel=2
 pkgdesc='GStreamer editing services'
 arch=('i686' 'x86_64')
 license=('LGPL')
 url='http://gstreamer.freedesktop.org/modules/gst-editing-services.html'
 depends=('gst-plugins-base')
-makedepends=('intltool' 'pkgconfig' 'gtk-doc' 'gobject-introspection')
+makedepends=('intltool' 'pkgconfig' 'gtk-doc' 'gobject-introspection'
+	     'bash-completion')
 source=("http://gstreamer.freedesktop.org/src/gstreamer-editing-services/gstreamer-editing-services-$pkgver.tar.xz")
-sha256sums=('6025842f3f83d18794576fbf181a7d6eb7470854efd1529c4acaf28d33e2f6d8')
-sha256sums=('cc20b90fb7bcec257b2afda7474664d493b1acece66da675d7df584588808bb3')
-sha256sums=('4a780cc27029d25271cf4f8bc17531aa9a1d435e4f807202fd3790f53b964dbe')
-sha256sums=('4a780cc27029d25271cf4f8bc17531aa9a1d435e4f807202fd3790f53b964dbe')
 sha256sums=('f5f7e97db04faeaf6ec941652e75221e244b88e570720e031965d81b759e7bd2')
 
 build() {
