Use /usr/share/bash-completion/completions/ for bash completions
git-svn-id: file:///srv/repos/svn-community/svn@155481 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -36,7 +36,7 @@ package() {
 
   install -Dm 755 cmd/ipfs/ipfs "$pkgdir/usr/bin/ipfs"
   install -Dm 644  ../ipfs.service "$pkgdir/usr/lib/systemd/user/ipfs.service"
-  install -Dm 644 misc/completion/ipfs-completion.bash "$pkgdir/etc/bash_completion.d/ipfs"
+  install -Dm 644 misc/completion/ipfs-completion.bash "$pkgdir/usr/share/bash-completion/completions/ipfs"
   install -Dm 644 -t "$pkgdir/usr/share/licenses/$pkgname" LICENSE
   install -Dm 644 -t "$pkgdir/usr/share/doc/$pkgname" README.md
 }
