--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=plasma5-applets-weather-widget
 pkgver=1.6.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Plasma 5 applet for displaying weather information from yr.no server"
-arch=(any)
+arch=(i686 x86_64)
 url="http://kde-apps.org/content/show.php/Weather+Widget?content=169572"
 license=(GPL)
 depends=(plasma-workspace qt5-graphicaleffects)
