--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 pkgbase=pandoc
 pkgname=(pandoc haskell-pandoc)
 pkgver=1.16
-pkgrel=2
+pkgrel=3
 pkgdesc="Conversion between markup formats"
 url="http://pandoc.org"
 license=("GPL")
@@ -42,7 +42,8 @@ build() {
 
 package_pandoc() {
     depends=('gmp' 'libffi' 'zlib')
-    optdepends=('pandoc-citeproc: for citation rendering with pandoc-citeproc filter')
+    optdepends=('pandoc-citeproc: for citation rendering with pandoc-citeproc filter'
+                'texlive-core: for pdf output')
 
     cd "${srcdir}/${pkgbase}-${pkgver}"
     runhaskell Setup copy --destdir="${pkgdir}"
