--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -21,10 +21,12 @@ backup=('etc/gnokiirc')
 install=$pkgname.install
 source=("http://www.gnokii.org/download/$pkgname/$pkgname-$pkgver.tar.bz2"
         'gnokii-config.patch'
-        'gnokii-lock.patch')
+        'gnokii-lock.patch'
+	'gnokii-gcc5.patch')
 md5sums=('d9627f4a1152d3ea7806df4532850d5f'
          'b2961b52ac1f770c4704ccc50b64fde2'
-         '17b629db85a6bb2b98ca59941aa95295')
+         '17b629db85a6bb2b98ca59941aa95295'
+         '5bcf2dadd31a826d1f80b53bb37d9bd0')
 
 prepare() {
   cd $pkgname-$pkgver
@@ -34,6 +36,9 @@ prepare() {
 
   # Set lock path
   patch -Np1 -i "$srcdir/gnokii-lock.patch"
+
+  # Fix build with GCC 5 (Fedora patch)
+  patch -Np1 -i "$srcdir/gnokii-gcc5.patch"
 }
 
 build() {
