--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,27 +5,22 @@
 # Contributor: Vitaliy Berdinskikh <skipper13@root.ua>
 
 pkgname=xmlrpc-c
-# Using the Advanced version
-pkgver=1.41.01
-pkgrel=2
-_svnrev=2726
+# Using the Stable version
+pkgver=1.43.01
+pkgrel=1
 epoch=1
 pkgdesc='XML-RPC for C and C++'
 arch=('x86_64' 'i686')
 url='http://xmlrpc-c.sourceforge.net/'
 license=('custom')
 depends=('curl' 'libxml2')
-makedepends=('libtool' 'setconf' 'python' 'subversion')
+makedepends=('libtool' 'setconf' 'clang' 'subversion')
 options=('!makeflags' '!emptydirs')
-source=("svn://svn.code.sf.net/p/xmlrpc-c/code/advanced#revision=$_svnrev")
+source=("svn://svn.code.sf.net/p/xmlrpc-c/code/stable")
 sha1sums=('SKIP')
 
-pkgver() {
-  python -c 'print("%01d.%02d.%02d" % tuple(map(int, (x.rsplit(" ",1)[1] for x in open("advanced/version.mk").read().split("\n")[-4:-1]))))'
-}
-
 build() {
-  cd advanced
+  cd stable
 
   [ "$CARCH" != "i686" ] && export CFLAGS="$CFLAGS -fPIC"
   ./configure --prefix=/usr \
@@ -36,21 +31,26 @@ build() {
     --disable-wininet-client \
     --enable-abyss \
     --enable-cplusplus
-  mkdir include/curl
+  mkdir -p include/curl
   touch include/curl/types.h
-  make CFLAGS_PERSONAL="$CFLAGS"
-  make -C tools CFLAGS_PERSONAL="$CFLAGS"
+
+  setconf config.mk CC clang
+  setconf config.mk CXX clang++
+
+  make CFLAGS_PERSONAL="$CFLAGS" CXXFLAGS_PERSONAL="$CXXFLAGS"
+  make -C tools CFLAGS_PERSONAL="$CFLAGS" CXXFLAGS_PERSONAL="$CXXFLAGS"
 }
 
 package() {
-  cd advanced
+  cd stable
 
   make DESTDIR="$pkgdir" install
   make -C tools DESTDIR="$pkgdir" install
-  install -Dm644 doc/COPYING "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
+  install -Dm 644 doc/COPYING "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
   # Remove references to build directory
   setconf "$pkgdir/usr/bin/xmlrpc-c-config" BLDDIR ''
   setconf "$pkgdir/usr/bin/xmlrpc-c-config" ABS_SRCDIR ''
 }
 
+# getver: -u 2 xmlrpc-c.sourceforge.net/change_stable.html
 # vim:set ts=2 sw=2 et:
