--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgbase=eric-i18n
 pkgver=6.1.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Language pack for the Eric IDE"
 arch=('any')
 depends=()
@@ -48,7 +48,7 @@ _package() {
 
   [ -z ${3} ] && _qtver="qt" || _qtver="qt4"
   install -Dm644 "eric6-${pkgver}/eric/i18n/eric6_${1}.qm" \
-                 "${pkgdir}/usr/share/${_qtver}/translations/eric6_${1}.qm"
+                 "${pkgdir}/usr/share/${_qtver}/translations/eric6_${1%%.*}.qm"
 }
 
 md5sums=('f4d04eba4364869186670843f013a853'
