upgpkg: mps-youtube 0.2.6-1
git-svn-id: file:///srv/repos/svn-community/svn@156184 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Johannes Löthberg <johannes@kyriasis.com>
 
 pkgname=mps-youtube
-pkgver=0.2.5
-pkgrel=2
+pkgver=0.2.6
+pkgrel=1
 
 pkgdesc="Terminal based YouTube jukebox with playlist management"
 url='https://github.com/np1/mps-youtube'
@@ -17,11 +17,20 @@ optdepends=('mpv: Alternative to mplayer for playback'
 
 install=mps-youtube.install
 
-source=("mps-youtube-$pkgver.tar.gz::https://github.com/np1/mps-youtube/archive/v$pkgver.tar.gz")
+source=("mps-youtube-$pkgver.tar.gz::https://github.com/np1/mps-youtube/archive/v$pkgver.tar.gz"
+        "fix-license-readme-changelog-dir.patch")
 
-sha256sums=('74d196058c9369a3587f076cafb1ee15baeb6be1465e270f7de9d9830463c869')
+sha256sums=('df3cc7ad9a49a0da390c38f40c905daa992d48de5fb421865ec19cc1fbec453f'
+            'aa3993ecec633bbf13248adc874b01bd7e80d61a9e0757ffe52964e93f490d27')
+
+prepare() {
+	cd mps-youtube-"$pkgver"
+
+	patch -p1 <"$srcdir"/fix-license-readme-changelog-dir.patch
+}
 
 package() {
-	cd mps-youtube-$pkgver
+	cd mps-youtube-"$pkgver"
+
 	python setup.py install --root="$pkgdir" --optimize=1
 }
