--- a/repos/community-i686/PKGBUILD
+++ b/repos/community-i686/PKGBUILD
@@ -4,23 +4,17 @@
 # Contributor: Nick B <Shirakawasuna at gmail _dot_com>
 
 pkgname=partitionmanager
-pkgver=1.2.1
-pkgrel=2
+pkgver=2.0.0
+pkgrel=1
 pkgdesc="A KDE utility that allows you to manage disks, partitions, and file systems"
-arch=('i686' 'x86_64')
+arch=(i686 x86_64)
 url="http://kde.org/applications/system/kdepartitionmanager/"
 license=(GPL2)
-depends=(kio parted hicolor-icon-theme)
+depends=(kpmcore hicolor-icon-theme)
 makedepends=(extra-cmake-modules kdoctools)
-optdepends=('e2fsprogs: ext2/3/4 support'
-	    'xfsprogs: XFS support'
-	    'jfsutils: JFS support'
-	    'reiserfsprogs: Reiser support'
-	    'ntfs-3g: NTFS support'
-	    'dosfstools: FAT32 support')
 install=$pkgname.install
 source=("http://download.kde.org/stable/$pkgname/$pkgver/src/$pkgname-$pkgver.tar.xz")
-md5sums=('be888d1718beb0ce04d7301714a2dfe9')
+md5sums=('d50698661f443fa5ac99de6329f9d0cf')
 
 prepare() {
   mkdir -p build
