--- a/repos/community-i686/PKGBUILD
+++ b/repos/community-i686/PKGBUILD
@@ -4,25 +4,25 @@
 
 pkgbase=pandoc
 pkgname=(pandoc haskell-pandoc)
-pkgver=1.16.0.1
-pkgrel=2
+pkgver=1.16.0.2
+pkgrel=1
 pkgdesc="Conversion between markup formats"
 url="http://pandoc.org"
 license=("GPL")
 arch=('i686' 'x86_64')
 makedepends=("ghc=7.10.3" "haskell-http" "haskell-juicypixels" "haskell-sha" "haskell-aeson"
              "haskell-base64-bytestring" "haskell-blaze-html" "haskell-blaze-markup"
-             "haskell-cmark" "haskell-data-default" "haskell-deepseq-generics" "haskell-mtl"
-             "haskell-extensible-exceptions" "haskell-filemanip" "haskell-haddock-library"
-             "haskell-highlighting-kate" "haskell-hslua" "haskell-http-client" "haskell-syb"
-             "haskell-http-client-tls" "haskell-http-types"  "haskell-text" "haskell-texmath"
-             "haskell-network" "haskell-old-time" "haskell-pandoc-types" "haskell-parsec"
-             "haskell-random" "haskell-scientific" "haskell-tagsoup" "haskell-temporary"
-             "haskell-network-uri" "haskell-unordered-containers" "haskell-zip-archive"
-             "haskell-vector" "haskell-xml" "haskell-yaml" "haskell-zlib")
+             "haskell-cmark" "haskell-data-default" "haskell-mtl" "haskell-extensible-exceptions"
+             "haskell-filemanip" "haskell-haddock-library" "haskell-highlighting-kate"
+             "haskell-hslua" "haskell-http-client" "haskell-syb" "haskell-http-client-tls"
+             "haskell-http-types"  "haskell-text" "haskell-texmath" "haskell-network"
+             "haskell-old-time" "haskell-pandoc-types" "haskell-parsec" "haskell-random"
+             "haskell-scientific" "haskell-tagsoup" "haskell-temporary" "haskell-network-uri"
+             "haskell-unordered-containers" "haskell-zip-archive" "haskell-vector" "haskell-xml"
+             "haskell-yaml" "haskell-zlib")
 options=('staticlibs')
 source=("http://hackage.haskell.org/packages/archive/${pkgname}/${pkgver}/${pkgname}-${pkgver}.tar.gz")
-sha256sums=('211bc1a4f1beaaf888d82e4e67414a3984cf494b58be49e157a1c21d9a09db1a')
+sha256sums=('f5f3262ef4574a111936fea0118557c523a8b0eaa7fea84b64b377b20a80f348')
 
 build() {
     cd "${srcdir}/${pkgname}-${pkgver}"
