--- a/repos/community-i686/PKGBUILD
+++ b/repos/community-i686/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Patrick Smits <mail@patricksmits.net>
 
 pkgname=yaws
-pkgver=2.0
+pkgver=2.0.2
 pkgrel=1
 pkgdesc='Pure Erlang HTTP web server/framework'
 arch=('x86_64' 'i686')
@@ -16,13 +16,13 @@ options=('!emptydirs')
 install="$pkgname.install"
 source=("http://yaws.hyber.org/download/$pkgname-$pkgver.tar.gz"
         "$pkgname.service")
-sha256sums=('0632761f455e2925436b0d0a28263154ee8b0d73347b00d2dbfed803142193bf'
+sha256sums=('24dd4aab844e7bb18a9a3cc795b8e8f5755e6f0f8eee3ebb54767ab19eacdde7'
             '09bd1f9f17833c83b4d82d3ac9dc2bf539c8e20ef92d438fced6e70b2aea61bc')
 
 prepare() {
   # Python 2 fix
   for f in cgi.yaws cgi-bin/foo.py; do
-	  sed -i 's:n/python:n/python2:' "$pkgname-$pkgver/www/$f"
+    sed -i 's:n/python:n/python2:' "$pkgname-$pkgver/www/$f"
   done
 }
 
@@ -44,5 +44,5 @@ package() {
     "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
 }
 
-# getver: -u 2 yaws.hyber.org
+# getver: yaws.hyber.org/download/?M=r
 # vim:set ts=2 sw=2 et:
