--- a/repos/community-x86_64/PKGBUILD
+++ b/repos/community-x86_64/PKGBUILD
@@ -35,13 +35,19 @@ build() {
 }
 
 package() {
-  make -C "$pkgname-$pkgver" DESTDIR="$pkgdir" install
+  cd "$pkgname-$pkgver"
+
+  make DESTDIR="$pkgdir" install
   install -d "$pkgdir/usr/lib/erlang/lib"
   ln -s /usr/lib/yaws "$pkgdir/usr/lib/erlang/lib/$pkgname-$pkgver"
-  install -Dm644 "$pkgname.service" \
+  install -Dm644 "$srcdir/$pkgname.service" \
     "$pkgdir/usr/lib/systemd/system/$pkgname.service"
-  install -Dm644 "$pkgname-$pkgver/LICENSE" \
+  install -Dm644 "$srcdir/$pkgname-$pkgver/LICENSE" \
     "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
+
+  # Path fixups
+  mv "$pkgdir/srv/http/www" "$pkgdir/srv/http/yaws"
+  cp -ru examples/include "$pkgdir/usr/lib/yaws-$pkgver/examples/"
 }
 
 # getver: yaws.hyber.org/download/?M=r
