--- a/repos/community-x86_64/PKGBUILD
+++ b/repos/community-x86_64/PKGBUILD
@@ -46,8 +46,10 @@ package() {
     "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
 
   # Path fixups
-  mv "$pkgdir/srv/http/www" "$pkgdir/srv/http/yaws"
   cp -ru examples/include "$pkgdir/usr/lib/yaws-$pkgver/examples/"
+  mv "$pkgdir/srv/http/yaws/"* "$pkgdir/srv/http/www" || true
+  rmdir "$pkgdir/srv/http/yaws" || true
+  mv "$pkgdir/srv/http/www" "$pkgdir/srv/http/yaws" || true
 }
 
 # getver: yaws.hyber.org/download/?M=r
