--- a/repos/community-x86_64/PKGBUILD
+++ b/repos/community-x86_64/PKGBUILD
@@ -5,7 +5,7 @@
 pkgbase=pandoc
 pkgname=(pandoc haskell-pandoc)
 pkgver=1.16.0.2
-pkgrel=3
+pkgrel=4
 pkgdesc="Conversion between markup formats"
 url="http://pandoc.org"
 license=("GPL")
@@ -44,6 +44,8 @@ package_pandoc() {
     depends=('gmp' 'libffi' 'zlib')
     optdepends=('pandoc-citeproc: for citation rendering with pandoc-citeproc filter'
                 'texlive-core: for pdf output')
+    replaces=('pandoc-static')
+    conflicts=('pandoc-static')
 
     cd "${srcdir}/${pkgbase}-${pkgver}"
     runhaskell Setup copy --destdir="${pkgdir}"
