--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=subsurface
 _pkgname=Subsurface
-pkgver=4.5.4
+pkgver=4.5.5
 pkgrel=1
 pkgdesc='Divelog program'
 url='http://subsurface-divelog.org/'
@@ -15,13 +15,14 @@ depends=('libzip' 'libxml2' 'libxslt' 'sqlite' 'libusb' 'libgit2'
          'subsurface-libdc' 'subsurface-marble'
          'qt5-connectivity' 'grantlee-qt5')
 source=("http://subsurface-divelog.org/downloads/${_pkgname}-${pkgver}.tgz")
-sha1sums=('e4ff548171b0a317a1f3f762bde2f62fd2152088')
+sha1sums=('f108d9d6048a34a4f61e37fab855081ce7c1ec67')
 
 install=install
 
 prepare() {
 	cd "${srcdir}/${_pkgname}-${pkgver}"
 	sed 's:<marble:<subsurface/marble:g' -i qt-ui/globe.*
+	sed 's:GIT_MERGE_TREE_FIND_RENAMES:GIT_MERGE_FIND_RENAMES:g' -i git-access.c
 }
 
 build() {
@@ -30,7 +31,6 @@ build() {
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DMARBLE_LIBRARIES=/usr/lib/libssrfmarblewidget.so \
-		-DUSE_LIBGIT23_API=1 \
 		.
 	make
 }
