--- a/repos/community-x86_64/PKGBUILD
+++ b/repos/community-x86_64/PKGBUILD
@@ -5,30 +5,37 @@
 # Contributor: Ian Naval <ianonavy@gmail.com>
 
 pkgname=go-ipfs
-pkgver=0.3.11
-pkgrel=2
-pkgdesc='The InterPlanetary File System is a peer-to-peer hypermedia distribution protocol'
+pkgver=0.4.0
+pkgrel=1
+
+pkgdesc='A peer-to-peer hypermedia distribution protocol'
 url='http://ipfs.io/'
 arch=(i686 x86_64)
 license=(MIT)
+
 depends=(glibc)
-makedepends=(go)
 optdepends=('fuse: for mounting/advanced use')
+makedepends=(go git)
+
 source=(go-ipfs-$pkgver.tar.gz::https://github.com/ipfs/go-ipfs/archive/v$pkgver.tar.gz
-	ipfs.service)
-sha512sums=('2a4d15527d6502add76f9c7f2be3c17293d2c54f90c83eafe4aad7e3d8be09df66e92f5864b4903e85ea147eec103eb9dbd85a67d30110c9a1ecc8c31d008793'
+        ipfs.service)
+sha512sums=('ff8d7c7b2da8a1315050706efa440cc3f06d76aa437a3b83dc2b1a2d7287fca1450d5f0d0b353a18407bcaa06748401bd609cdb1ba667a7d0121ba8216d6d444'
             '1a6bc7fffc3c3640cda3f33c107424edd698c62bd8509731856b8827ea18be1a1845ef0d5ca15325d48d7d871a78daacc011ff9eacea926bc35899850990c1c6')
 
 prepare() {
-  cd go-ipfs-$pkgver
+  export GOPATH="$PWD"/.gopath
+  mkdir -p "$GOPATH"/src/github.com/ipfs
+  ln -sf "$PWD"/go-ipfs-$pkgver "$GOPATH"/src/github.com/ipfs/go-ipfs
 
-  mkdir -p .gopath/src/github.com/ipfs
-  ln -sf "$PWD" .gopath/src/github.com/ipfs/go-ipfs
+  cd "$GOPATH"/src/github.com/ipfs/go-ipfs
+  make toolkit_upgrade
 }
 
 build() {
-  cd go-ipfs-$pkgver/cmd/ipfs
-  GOPATH="$PWD/../../.gopath" go build -v
+  export PATH="$PATH":"$PWD"/.gopath/bin
+  cd "$GOPATH"/src/github.com/ipfs/go-ipfs
+
+  make build
 }
 
 package() {
