--- a/repos/community-any/PKGBUILD
+++ b/repos/community-any/PKGBUILD
@@ -9,7 +9,7 @@
 
 pkgname=jedit
 pkgver=5.3.0
-pkgrel=1
+pkgrel=2
 pkgdesc='Text editor for programmers'
 arch=('any')
 url='http://www.jedit.org/'
@@ -17,7 +17,7 @@ license=('GPL')
 depends=('java-runtime' 'desktop-file-utils')
 makedepends=('apache-ant' 'gendesk' 'unzip' 'tar')
 optdepends=('java-environment: for java development'
-            'ttf-fira-mono: usable font')
+            'noto-fonts: usable font')
 options=('!emptydirs')
 install=$pkgname.install
 noextract=("${pkgname}${pkgver}install.jar")
@@ -27,7 +27,7 @@ source=('jedit.sh'
         "http://sourceforge.net/projects/jedit/files/jedit/$pkgver/jedit${pkgver}source.tar.bz2")
 sha256sums=('b2e5a8f2f4818b336b5d71f677114f1bc01e929d7fa60918675cc2234dae1a3a'
             'a1dd1b688f08c5c967861fe80df13cac201afa6dcfcecc9a289b2c3bec7c8915'
-            '1a8c6e51810abc9ff56606b61042e2e980cb4b479fa0099b3c93acd7e4b9295b'
+            'dc5fe0050321d4f34bce556895fbc39cc6f7df194e14eb4f6ea53166a4d82347'
             '8d56d036be4dd45254748f063ade01293b862a615cdff6aed274ab58085f6304')
 
 prepare() {
