--- a/repos/community-any/jedit.props
+++ b/repos/community-any/jedit.props
@@ -14,8 +14,9 @@ buffer.maxLineLen=99
 icon-theme=tango
 lookAndFeel=com.sun.java.swing.plaf.gtk.GTKLookAndFeel
 view.fontsize=14
-view.font=Fira Mono
+view.font=Noto Mono
 view.selectionFg=false
+view.antiAlias=standard
 view.caretColor=\#333333
 view.lineHighlightColor=\#deebfb
 view.thickCaret=false
