Builds, but not in a chroot. Add TODO comment.
git-svn-id: file:///srv/repos/svn-community/svn@170802 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -6,6 +6,7 @@
 # Contributor: Dusty Phillips <dusty@buchuki.com>
 
 # Does not currently build in a chroot.
+# TODO: move apache-ivy from AUR
 
 pkgname=jedit
 pkgver=5.3.0
@@ -15,7 +16,7 @@ arch=('any')
 url='http://www.jedit.org/'
 license=('GPL')
 depends=('java-runtime' 'desktop-file-utils')
-makedepends=('apache-ant' 'gendesk' 'unzip' 'tar')
+makedepends=('apache-ant' 'gendesk' 'unzip' 'tar' 'maven' 'java-environment')
 optdepends=('java-environment: for java development'
             'noto-fonts: usable font')
 options=('!emptydirs')
@@ -42,7 +43,7 @@ prepare() {
 build() {
   cd jEdit
 
-  ant dist-java
+  ant -k dist-java
 }
 
 package() {
