--- a/repos/community-i686/PKGBUILD
+++ b/repos/community-i686/PKGBUILD
@@ -2,8 +2,8 @@
 # Contributor: Alexey Yakovenko <waker@users.sourceforge.net>
 
 pkgname=deadbeef
-pkgver=0.7.0
-pkgrel=3
+pkgver=0.7.1
+pkgrel=1
 pkgdesc='A GTK+ audio player for GNU/Linux.'
 arch=('i686' 'x86_64')
 url='http://deadbeef.sourceforge.net'
@@ -17,6 +17,7 @@ optdepends=('gtk2: for the GTK2 interface'
             'libsamplerate: for Resampler plugin'
             'libvorbis: for Ogg Vorbis playback'
             'libmad: for MP1/MP2/MP3 playback'
+            'mpg123: for MP1/MP2/MP3 playback'
             'flac: for FLAC playback'
             'curl: for Last.fm scrobbler, SHOUTcast, Icecast, Podcast support'
             'imlib2: for artwork plugin'
@@ -33,7 +34,7 @@ optdepends=('gtk2: for the GTK2 interface'
             'ffmpeg: for ffmpeg plugin')
 install='deadbeef.install'
 source=("http://downloads.sourceforge.net/project/${pkgname}/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('d5450785139757a016dcd4dfc66479c7')
+md5sums=('824313b017f86aec815c356462138366')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
