--- a/repos/community-any/PKGBUILD
+++ b/repos/community-any/PKGBUILD
@@ -3,8 +3,8 @@
 
 pkgbase=python-planout
 pkgname=(python-planout python2-planout)
-pkgver=0.5.20151020
-_commit=9a47b316aa31024588f063426bbadd8867cdab77
+pkgver=0.6.0
+_commit=6ba0aba6addb08e03ed6e2d21f9b224b3d56d503
 pkgrel=1
 pkgdesc="A framework for online field experimentation"
 arch=('any')
@@ -16,22 +16,26 @@ source=("git+https://github.com/facebook/planout.git#commit=$_commit")
 sha512sums=('SKIP')
 
 prepare() {
+  # https://github.com/facebook/planout/pull/104
+  sed -e '42s/\t/        /' \
+      -e '43s/range(8)/list(range(8))/' \
+      -i planout/python/planout/test/test_assignment.py
   cp -a planout{,-py2}
 }
 
 build() {
-  cd "$srcdir/planout/python"
+  cd "$srcdir"/planout/python
   python setup.py build
 
-  cd "$srcdir/planout-py2/python"
+  cd "$srcdir"/planout-py2/python
   python2 setup.py build
 }
 
 check() {
-  cd "$srcdir/planout/python/planout/test"
+  cd "$srcdir"/planout/python/planout/test
   py.test
 
-  cd "$srcdir/planout-py2/python/planout/test"
+  cd "$srcdir"/planout-py2/python/planout/test
   py.test2
 }
 
@@ -41,7 +45,7 @@ package_python-planout() {
   cd planout/python
   python setup.py install -O1 --root "$pkgdir"
 
-  install -Dm644 ../LICENSE "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
+  install -Dm644 ../LICENSE "$pkgdir"/usr/share/licenses/$pkgname/LICENSE
 }
 
 package_python2-planout() {
@@ -50,5 +54,5 @@ package_python2-planout() {
   cd planout-py2/python
   python2 setup.py install -O1 --root "$pkgdir"
 
-  install -Dm644 ../LICENSE "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
+  install -Dm644 ../LICENSE "$pkgdir"/usr/share/licenses/$pkgname/LICENSE
 }
