--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,12 +1,12 @@
 # $Id$
-# Maintainer: Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
+# Maintainer: Jaroslav Lichtblau <svetlemodry@archlinux.org>
 # Contributor: leif_thande <leif.thande@gmail.com>
 # Contributor: tranquility <trankas@gmail.com>
 # Contributor: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=atool
 pkgver=0.39.0
-pkgrel=3
+pkgrel=4
 pkgdesc="A script for managing file archives of various types"
 arch=('any')
 url="http://www.nongnu.org/atool/"
@@ -21,6 +21,7 @@ optdepends=('bzip2: for using atool with bzip2 compressed archives'
             'p7zip: for using atool with 7z archives'
             'tar: for using atool with tar archives'
             'unace: for using atool with ace archives'
+            'unrar: for using atool with rar archives'
             'zip: for using atool for creating zip archives'
             'unzip: for using atool for unpacking archives')
 changelog=$pkgname.changelog
