--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 pkgbase=jupyter
 pkgname=(jupyter ipython2-notebook)
 pkgver=4.1.0
-pkgrel=2
+pkgrel=3
 pkgdesc="A language-agnostic web-based interactive shell/notebook server."
 arch=('any')
 url="http://jupyter.org/"
@@ -23,11 +23,14 @@ optdepends=('pandoc: notebook conversion'
 # rebundle all the parts that were split out
 # but split them out officially over time
 _ipywv=4.1.1  # ipywidgets
-_jnbcv=4.1.0  # notebook convert
+_jnbcv=4.2.0  # notebook convert
 _jnbfv=4.0.1  # notebook format
 _jconv=4.1.1  # jupyter console
 _jcliv=4.2.2  # jupyter client
 _qtcv=4.2.1   # qtconsole
+
+# ipywidgets seems to be going through a lot of unstable "releases" today (2016-04-16)
+# wait for the beta testing to finish?
 
 # future order of splits:
 # python{,2}-jupyter_core
@@ -43,7 +46,7 @@ source=("jupyter_core-$pkgver.tgz::https://github.com/jupyter/jupyter_core/archi
         "qtconsole-$_qtcv.tgz::https://github.com/jupyter/qtconsole/archive/$_qtcv.tar.gz")
 md5sums=('b7e928f965f68aef13fea1bf9d6384aa'
          '099e9b76c52839dc33604aad7a2f1a42'
-         '06655576713ba1ff7cece2b92760c187'
+         '8bd88771cc00f575d5edcd0b5197f964'
          'ab7172e517c9d561c0c01eef5631b4c8'
          'a8b077ae0a5c57e9518ac039ad5febb8'
          '988ea87554215a83c6ad52e554d8d8c4'
