Move dbus policy files under /usr
git-svn-id: file:///srv/repos/svn-community/svn@467051 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=kpmcore
 pkgver=4.0.0
-pkgrel=2
+pkgrel=3
 pkgdesc="Library for managing partitions"
 arch=(x86_64)
 url="https://www.kde.org/applications/system/kdepartitionmanager/"
@@ -20,13 +20,17 @@ optdepends=('e2fsprogs: ext2/3/4 support'
             'exfat-utils: exFAT support'
             'nilfs-utils: nilfs support'
             'udftools: UDF support')
-source=("http://download.kde.org/stable/$pkgname/$pkgver/src/$pkgname-$pkgver.tar.xz"{,.sig})
+source=("http://download.kde.org/stable/$pkgname/$pkgver/src/$pkgname-$pkgver.tar.xz"{,.sig} kpmcore-dbusdir.patch)
 sha256sums=('d7f044ca256369bec62ec5460bad397cd67473f4a8b2d48686e91a9bf24ddf6d'
-            'SKIP')
+            'SKIP'
+            '52b81ba66ff3e23640a2e56927acaf028a7b7db81d615bf82fb99b9bb7b7de59')
 validpgpkeys=(1EE5A3205904BAA2B88C0A9D24FD31940095C0E1) # Andrius Štikonas <andrius@stikonas.eu>
 
 prepare() {
   mkdir -p build
+
+  cd $pkgname-$pkgver
+  patch -p1 -i ../kpmcore-dbusdir.patch # Fix d-bus policy install dir
 }
 
 build() {
