--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Nicola Squartini <tensor5@gmail.com>
 
 pkgname=atom
-pkgver=1.36.1
+pkgver=1.37.0
 pkgrel=1
 pkgdesc='A hackable text editor for the 21st Century'
 arch=('x86_64')
@@ -26,19 +26,19 @@ source=("${pkgname}-${pkgver}.tar.gz::https://github.com/atom/atom/archive/v${pk
         'symbols-view-use-system-ctags.patch'
         'use-system-apm.patch'
         'use-system-electron.patch')
-sha256sums=('3fa6f0d86f3108a55b38c00e5d94da8ca6ceea74ae2a5aa263ef5bfb50eca0d8'
+sha256sums=('52b498d3a0e2d524d6b74738a21e7ab2f5ef899e4fcc251a8ccbd4796a3d6c21'
             'cdf87ab82cfcf69e8904684c59b08c35a68540ea16ab173fce06037ac341efcd'
             '971e4575884a0d1bf4683b5c6402a3d6059e41345cc09db83df5a0a30ad41bb6'
             '530b46d31df0f5e8f5881e1608a66fe75d549092a6db2e72ba3ad69c48714153'
             '75a672adc0237ea8c93ff67d8296eb73b87792b7b58cdaef7bf596fb6edd073f'
             '3ce4f665a1e3484bb408a665500a8f99d8afb5e3cd9d70374c5f9f4a37176e42'
-            'b38f7538d1506bd11bf57cc5a2919b2d29fb39a8811a0bf8e7fdd68e6c144296'
-            'd3bd6c952ba0853811ebd3a2f268e3be796a41b8f26650c5b6489ff7cac3749c'
+            'a83101948752153d0f357798b9651a5262232ec3dce5f4eb5cc136a5e0b6f929'
+            '2219fed30a0aca7dbed3b5f4781be23aecf965c42e5fcec0b34c9611bad11ae0'
             '9073d3947f11e21788f0931021e4f41d01e3651cc99f2b3320626f478e26c491'
             '4033929dde0b81bb6f174cc4c79050474afaf85b54b928bfe13e05059448ebb1'
             '3c68e6b3751313e1d386e721f8f819fb051351fb2cf8e753b1d773a0f475fef8'
             '53f43c9328a66e24b3467a0a06d9dfde83475f7e54251bf7a523beafaa043806'
-            '95cddeae2be0a9e54d29122f5716687e48b4a270b3207f7caf0b351cde158980')
+            '0d6c12bdbe1cfae67df0b4c8948068277aa68b1c490f39d9a03fde53fd6ecd3f')
 
 prepare() {
   cd "${srcdir}/${pkgname}-${pkgver}"
@@ -65,6 +65,7 @@ build() {
   rm package-lock.json
 
   ATOM_RESOURCE_PATH="${PWD}" \
+  npm_config_build_from_source=true \
   npm_config_target=$(< /usr/lib/electron/version) \
   apm install
 
@@ -83,7 +84,7 @@ build() {
   cd script
   npm install
   # Set ELECTRON_VERSION (see use-system-electron.patch)
-  env ELECTRON_VERSION=$(< /usr/lib/electron/version) ./build
+  env ELECTRON_VERSION=$(< /usr/lib/electron/version) ./build --no-bootstrap
 }
 
 package() {
