--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=atom
 pkgver=1.37.0
-pkgrel=1
+pkgrel=2
 pkgdesc='A hackable text editor for the 21st Century'
 arch=('x86_64')
 url='https://github.com/atom/atom'
@@ -22,7 +22,7 @@ source=("${pkgname}-${pkgver}.tar.gz::https://github.com/atom/atom/archive/v${pk
         'fix-license-path.patch'
         'fix-restart.patch'
         'node-env-production.patch'
-        'no-unsafe-eval.patch'
+        'no-unsafe-eval-warning.patch'
         'symbols-view-use-system-ctags.patch'
         'use-system-apm.patch'
         'use-system-electron.patch')
@@ -35,7 +35,7 @@ sha256sums=('52b498d3a0e2d524d6b74738a21e7ab2f5ef899e4fcc251a8ccbd4796a3d6c21'
             'a83101948752153d0f357798b9651a5262232ec3dce5f4eb5cc136a5e0b6f929'
             '2219fed30a0aca7dbed3b5f4781be23aecf965c42e5fcec0b34c9611bad11ae0'
             '9073d3947f11e21788f0931021e4f41d01e3651cc99f2b3320626f478e26c491'
-            '4033929dde0b81bb6f174cc4c79050474afaf85b54b928bfe13e05059448ebb1'
+            '78941a3415c18e1b8cb6ea5f20f5afe9b35e09ad155ecda02beb114b979b14b4'
             '3c68e6b3751313e1d386e721f8f819fb051351fb2cf8e753b1d773a0f475fef8'
             '53f43c9328a66e24b3467a0a06d9dfde83475f7e54251bf7a523beafaa043806'
             '0d6c12bdbe1cfae67df0b4c8948068277aa68b1c490f39d9a03fde53fd6ecd3f')
@@ -50,7 +50,7 @@ prepare() {
   patch -Np1 -i "${srcdir}"/fix-license-path.patch
   patch -Np1 -i "${srcdir}"/fix-restart.patch
   patch -Np1 -i "${srcdir}"/node-env-production.patch
-  patch -Np1 -i "${srcdir}"/no-unsafe-eval.patch
+  patch -Np1 -i "${srcdir}"/no-unsafe-eval-warning.patch
 
   # Fix for Electron 3
   patch -Np1 -i "${srcdir}"/electron-3.patch
