upgpkg: haskell-missingh 1.4.2.0-1
rebuild with MissingH 1.4.2.0, hslogger 1.3.0.0

git-svn-id: file:///srv/repos/svn-community/svn@467338 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,18 +3,18 @@
 
 _hkgname=MissingH
 pkgname=haskell-missingh
-pkgver=1.4.1.0
-pkgrel=18
+pkgver=1.4.2.0
+pkgrel=1
 pkgdesc="Large utility library"
 url="http://software.complete.org/missingh"
 license=("BSD")
 arch=('x86_64')
-depends=('ghc-libs' "haskell-hunit" "haskell-hslogger" "haskell-network"
+depends=('ghc-libs' "haskell-hslogger" "haskell-network"
          "haskell-old-locale" "haskell-old-time" "haskell-random"
          "haskell-regex-compat")
-makedepends=('ghc')
+makedepends=('ghc' 'haskell-hunit')
 source=("https://hackage.haskell.org/packages/archive/${_hkgname}/${pkgver}/${_hkgname}-${pkgver}.tar.gz")
-sha512sums=('0d6e5c89ad80da7dcb053535e455b5c5f36c5e3289820ee64197a404671a67213d14a57842122614eb7981d3eb6c563fbfd2657d5ea5d70d2400eb247a73371e')
+sha512sums=('6e97ac1c7a126c17a9497bf5afcfab11a2bbf56358ef013f1e7ac5d4095b531976157e9bba1b3abab7a45c98e4d3525e919c926506842e56ef721edcbd944b3c')
 
 build() {
     cd $_hkgname-$pkgver
