unquoted variables todo
git-svn-id: file:///srv/repos/svn-community/svn@517790 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -15,9 +15,9 @@ source=("git+https://gitlab.com/limitland/flatbedcursors.git#tag=v$pkgver")
 md5sums=('SKIP')
 
 package() {
-  cd $srcdir/flatbedcursors
+  cd "$srcdir/flatbedcursors"
 
-  export ICONSDIR="$pkgdir"/usr/share/icons/
-  mkdir -p "$pkgdir"/usr/share/icons/
+  export ICONSDIR="$pkgdir/usr/share/icons/"
+  mkdir -p "$pkgdir/usr/share/icons/"
   ./install-all
 }
