--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=pandoc
 pkgver=2.7.3
-pkgrel=71
+pkgrel=72
 pkgdesc='Conversion between markup formats'
 url='https://pandoc.org'
 license=('GPL')
@@ -35,6 +35,7 @@ prepare() {
 
     # TODO: find a better solution
     sed -i "s|let env' = dynlibEnv ++ |let env' = dynlibEnv ++ [(\"LD_LIBRARY_PATH\", \"$PWD/dist/build\")] ++ |" test/Tests/Command.hs
+    sed -i 's/< *0.4/<1/' $pkgname.cabal
 }
 
 build() {
