upgpkg: libcurl-gnutls 7.72.0-2: update dependencies
git-svn-id: file:///srv/repos/svn-community/svn@684937 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,13 +3,14 @@
 
 pkgname=libcurl-gnutls
 pkgver=7.72.0
-pkgrel=1
+pkgrel=2
 pkgdesc='An URL retrieval library (linked against gnutls)'
 arch=('x86_64')
 url='https://curl.haxx.se'
 license=('MIT')
-depends=('curl' 'glibc' 'gnutls' 'libpsl' 'nettle' 'zlib'
-         'libssh2.so')
+depends=('curl' 'glibc' 'gnutls' 'libidn2' 'libidn2.so' 'libnghttp2'
+         'libpsl' 'libpsl.so' 'nettle' 'libnettle.so' 'libssh2' 'libssh2.so'
+         'zlib' 'zstd')
 options=('strip')
 source=("https://curl.haxx.se/download/curl-${pkgver}.tar.gz"{,.asc})
 sha512sums=('f1946394595baa2b2889c4fed5e8745036cecfe9c425010c41fbc4baa71ffd7ff3e78289dd7ee14f0c74c482056838e5408d63f9ee9ee06c31ed920282f08507'
