python-dephell-argparse: unify with other dephell packages
merge styles
use PyPI tarballs to avoid circular build dependencies

git-svn-id: file:///srv/repos/svn-community/svn@685528 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,3 +1,4 @@
+# Maintainer: Eli Schwartz <eschwartz@archlinux.org>
 # Maintainer: Jelle van der Waa <jelle@archlinux.org>
 
 _pkgname=dephell_argparse
@@ -5,33 +6,31 @@ pkgname=python-dephell-argparse
 pkgver=0.1.2
 pkgrel=1
 pkgdesc='Argparse with groups, commands, colors, and fuzzy matching'
-arch=(any)
+arch=('any')
+url="https://github.com/dephell/${_pkgname}"
 license=('MIT')
-url='https://github.com/dephell/dephell_argparse'
-depends=(python)
-makedepends=(python-dephell)
-checkdepends=(python-pytest)
-source=($pkgname-$pkgver.tar.gz::https://github.com/dephell/dephell_argparse/archive/v.$pkgver.tar.gz)
-sha512sums=('8750cfcc484956a16209b1fc539a031a43fb308fa06a90442b54f486fee69ef09da0f5262072260a9b8de2654d45c14aa971a1aaa59093759bf06dd9b65f65a4')
-
-prepare() {
-  cd ${_pkgname}-v.${pkgver}
-  dephell deps convert --from pyproject.toml --to setup.py
-}
+depends=('python')
+makedepends=('python-setuptools')
+checkdepends=('python-pytest')
+source=("https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/${_pkgname}/${_pkgname}-${pkgver}.tar.gz")
+sha512sums=('6c33dd01e3fccfe52085d21bfffe61204748e0ec926652adf9f59c3ac6c4d3123ef40b129fae980f3ef75c48311fa2db347c9fdb003c9b5ae295ca9a4e02179e')
+b2sums=('860320e63469c4e9317f68403388090d0e58cea608966a03064422c003c01b11cdc86b096b96f7fa9f33629a135962142072e98bb4a870d12fb57fccce4f0f51')
 
 build() {
-  cd ${_pkgname}-v.${pkgver}
-  python3 setup.py build
+    cd "${srcdir}"/${_pkgname}-${pkgver}
+
+    python setup.py build
 }
 
 check() {
-  cd ${_pkgname}-v.${pkgver}
-  python -m pytest tests
+    cd "${srcdir}"/${_pkgname}-${pkgver}
+
+    python -m pytest
 }
 
 package() {
-  cd ${_pkgname}-v.${pkgver}
-  python setup.py install --root="$pkgdir" --optimize=1
+    cd "${srcdir}"/${_pkgname}-${pkgver}
 
-  install -Dm644 LICENSE -t "$pkgdir"/usr/share/licenses/$pkgname/
+    python setup.py install --root="${pkgdir}" --optimize=1 --skip-build
+    install -Dm644 LICENSE "${pkgdir}"/usr/share/licenses/${pkgname}/LICENSE
 }
