upgpkg: libwebrtc 83.git1.18721df-2: libwebrtc fix linking issues with telegram-desktop 2.3
git-svn-id: file:///srv/repos/svn-community/svn@685727 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/args.gn
+++ b/trunk/args.gn
@@ -3,26 +3,25 @@ target_os="linux"
 is_component_build=false
 is_debug=false
 is_clang=false
-symbol_level=2
 proprietary_codecs=true
-use_custom_libcxx=true
-use_system_libjpeg=true
+use_custom_libcxx=false
+use_system_libjpeg=false
 use_rtti=true
 use_gold=false
 use_sysroot=false
 linux_use_bundled_binutils=false
-enable_dsyms=false
+enable_dsyms=true
 rtc_include_tests=false
 rtc_build_examples=false
 rtc_build_tools=false
 rtc_build_opus=false
 rtc_build_ssl=false
-rtc_ssl_root="/usr/include/openssl/"
-rtc_ssl_libs=["/usr/lib/libssl.so","/usr/lib/libcrypto.so","/usr/lib/libdl.so","/usr/lib/libpthread.so"]
+rtc_ssl_root="/usr/include"
+rtc_ssl_libs=["ssl","crypto"]
 rtc_builtin_ssl_root_certificates=true
 rtc_build_ffmpeg=false
-rtc_ffmpeg_root="../../../ffmpeg"
-rtc_ffmpeg_libs=["/usr/lib/libavfilter.so","/usr/lib/libswscale.so","/usr/lib/libswresample.so","/usr/lib/libavutil.so","/usr/lib/libva-x11.so","/usr/lib/libva-drm.so","/usr/lib/libva.so","/usr/lib/libvdpau.so","/usr/lib/libdrm.so","/usr/lib/libXfixes.so","/usr/lib/libXext.so","/usr/lib/libX11.so","/usr/lib/libxcb.so","/usr/lib/libXau.so","/usr/lib/libXdmcp.so","/usr/lib/libdbus-1.so"]
+rtc_ffmpeg_root="/usr/include"
+rtc_ffmpeg_libs=["avcodec","swscale","swresample","avutil"]
 rtc_opus_root="/usr/include/opus"
 rtc_enable_protobuf=false
 treat_warnings_as_errors=false
